--- a/public/index.html
+++ b/public/index.html
@@ -4,11 +4,13 @@
 <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <title>中科知道 | AIGC</title>
+  <meta name="description" content="通用人工智能（AGI）">
   <meta name="viewport" content="width=device-width,initial-scale=1.0,user-scalable=no">
+  <meta name="keywords" content="AIGC，大模型，大语言模型（LLM），私有化部署，通用人工智能（AGI），ChatGPT，GPT，OpenAI">
   <link rel="icon" href="<%= BASE_URL %>favicon.ico">
-  <title>
-    中科知道 | AIGC
-  </title>
+  <script charset="UTF-8" id="LA_COLLECT" src="//sdk.51.la/js-sdk-pro.min.js"></script>
+  <script>LA.init({ id: "3ExOtMQ3PR65ENqI", ck: "3ExOtMQ3PR65ENqI", hashMode: true })</script>
   <style>
     .popover-body {
       padding: 12px !important;
@@ -17,6 +19,28 @@
     html {
       font-size: 12px;
     }
+
+    #modal-scoped .modal-body {
+      padding: 0;
+    }
+
+    #modal-scoped .modal-content {
+      background-color: transparent;
+      border: none;
+    }
+
+
+
+    /* #modal-scoped .modal-dialog {
+        margin: 0;
+      }
+
+      #modal-scoped .modal-dialog {
+        width: 100vw;
+        max-width: none;
+        height: 100vh !important;
+        margin: 0 !important;
+      } */
 
     @media (min-width: 375px) {
       html {
