购车错误报警和机器人接口修改

--- a/public/index.html
+++ b/public/index.html
@@ -9,10 +9,10 @@
   <meta name="viewport" content="width=device-width,initial-scale=1.0,user-scalable=no">
   <meta name="keywords" content="AIGC，大模型，大语言模型（LLM），私有化部署，通用人工智能（AGI），ChatGPT，GPT，OpenAI">
   <link rel="icon" href="<%= BASE_URL %>favicon.ico">
+  <script src="/new-sse.js"></script>
   <script charset="UTF-8" id="LA_COLLECT" src="//sdk.51.la/js-sdk-pro.min.js"></script>
   <script>LA.init({ id: "3ExOtMQ3PR65ENqI", ck: "3ExOtMQ3PR65ENqI", hashMode: true })</script>
   <style>
-
     html {
       font-size: 12px;
     }
