1、新增seo 2、天然气列表布局修改

--- a/public/index.html
+++ b/public/index.html
@@ -5,9 +5,9 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <title>中科知道 | AIGC</title>
-  <meta name="description" content="通用人工智能（AGI）">
+  <meta name="description" content="通用人工智能(AGI)">
   <meta name="viewport" content="width=device-width,initial-scale=1.0,user-scalable=no">
-  <meta name="keywords" content="AIGC，大模型，大语言模型（LLM），私有化部署，通用人工智能（AGI），ChatGPT，GPT，OpenAI">
+  <meta name="keywords" content="中科知道,中科知道官网,中科知道(北京)科技有限公司AIGC,大模型,大语言模型(LLM),私有化部署,通用人工智能(AGI),ChatGPT,GPT,OpenAI">
   <link rel="icon" href="<%= BASE_URL %>favicon.ico">
   <script src="/new-sse.js"></script>
   <!-- <script charset="UTF-8" id="LA_COLLECT" src="//sdk.51.la/js-sdk-pro.min.js"></script>
@@ -46,10 +46,10 @@
       }
     }
 
-    /* // 如果设备是414px， 100vw == 414px；根字号为18px */
+    /* // 如果设备是414px, 100vw == 414px；根字号为18px */
     @media (min-width: 414px) {
       html {
-        /* 414px作为18px的基准,根字号大小累加增加4px （18px - 22px） */
+        /* 414px作为18px的基准,根字号大小累加增加4px (18px - 22px) */
         font-size: calc(13px + 4 * (100vw - 414px) / 586);
       }
     }
