--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,7 @@
   <meta name="description" content="通用人工智能(AGI)">
   <meta name="viewport" content="width=device-width,initial-scale=1.0,user-scalable=no">
   <meta name="keywords" content="中科知道,中科知道官网,中科知道(北京)科技有限公司AIGC,大模型,大语言模型(LLM),私有化部署,通用人工智能(AGI),ChatGPT,GPT,OpenAI">
+  <meta name="baidu-site-verification" content="codeva-bOa7yJyCmF" />
   <link rel="icon" href="<%= BASE_URL %>favicon.ico">
   <script src="/new-sse.js"></script>
   <!-- <script charset="UTF-8" id="LA_COLLECT" src="//sdk.51.la/js-sdk-pro.min.js"></script>
