--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,15 @@
   <meta name="keywords" content="中科知道,中科知道官网,中科知道(北京)科技有限公司AIGC,大模型,大语言模型(LLM),私有化部署,通用人工智能(AGI),ChatGPT,GPT,OpenAI">
   <meta name="baidu-site-verification" content="codeva-bOa7yJyCmF" />
   <link rel="icon" href="<%= BASE_URL %>favicon.ico">
+  <script>
+    var _hmt = _hmt || [];
+    (function () {
+      var hm = document.createElement("script");
+      hm.src = "https://hm.baidu.com/hm.js?63d2898c8833e777ca32267265db4c18";
+      var s = document.getElementsByTagName("script")[0];
+      s.parentNode.insertBefore(hm, s);
+    })();
+  </script>
   <script src="/new-sse.js"></script>
   <!-- <script charset="UTF-8" id="LA_COLLECT" src="//sdk.51.la/js-sdk-pro.min.js"></script>
   <script>LA.init({ id: "3ExOtMQ3PR65ENqI", ck: "3ExOtMQ3PR65ENqI", hashMode: true })</script> -->
