--- a/public/index.html
+++ b/public/index.html
@@ -6,8 +6,9 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <title>中科知道官网 - AIGC，生成式AI企业级解决方案，大语言模型(LLM)，私有化部署</title>
   <meta name="description" content="通用人工智能(AGI)">
-  <meta name="viewport" content="width=device-width，initial-scale=1.0，user-scalable=no">
-  <meta name="keywords" content="中科知道，中科知道官网，中科知道(北京)科技有限公司，AIGC，大模型，大语言模型(LLM)，私有化部署，通用人工智能(AGI)，生成式AI企业级解决方案，ChatGPT，GPT，OpenAI">
+  <meta name="viewport" content="width=device-width,initial-scale=1.0,user-scalable=no">
+  <meta name="keywords"
+    content="中科知道，中科知道官网，中科知道(北京)科技有限公司，AIGC，大模型，大语言模型(LLM)，私有化部署，通用人工智能(AGI)，生成式AI企业级解决方案，ChatGPT，GPT，OpenAI">
   <meta name="baidu-site-verification" content="codeva-bOa7yJyCmF" />
   <link rel="icon" href="<%= BASE_URL %>favicon.ico">
   <script>
